# better-ch

./: AGENTS.md  Cargo.toml  README.md  plan
.github/: renovate.json
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/api/: client.rs  mod.rs  models.rs
src/auth/: mod.rs  oauth.rs  token.rs
src/ui/: app.rs  mod.rs  navigation.rs
src/ui/views/: app_detail.rs  apps.rs  dashboard.rs  logs.rs  mod.rs  settings.rs
tests/: integration_client.rs  integration_client_more.rs
