[package]
name = "better-ch"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI
crossterm = "0.29.0"
ratatui = "0.30.0"

# HTTP & API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
keyring = "3"
oauth2 = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.26"
url = "2"
dirs = "6"
toml = "0.8"


